   numpy.testing.assert_allclose #4438)

Deprecations
 * The MDAnalysis.analysis.waterdynamics module has been deprecated in favour
   of the waterdynamics MDAKit and will be removed in version 3.0.0 (PR #4404)
 * The MDAnalysis.analysis.psa module has been deprecated in favour of
   the PathSimAnalysis MDAKit and will be removed in version 3.0.0
   (PR #4403)


12/26/23 IAlibay, ianmkenney, PicoCentauri, pgbarletta, p-j-smith, 
         richardjgowers, lilyminium, ALescoulie, hmacdope, HeetVekariya, 
         JoStoe, jennaswa, ljwoods2

 * 2.7.0

Fixes
  * Fix doctest errors of lib/transformations.py (Issue #3925, PR #4370)
  * Fix documentation building errors due to `html_static_path` and unindented
    block of code (Issue #4362, PR #4365)
  * Updated cimport for numpy to maintain cimport consistency (Issue #3908)
  * Fix `NoJump` unwrapping for jumps on the second frame in a
    trajectory (PR #4258, Issue #4257)
  * Deprecated np.float_ and np.NaN aliases have been replaced with
    their original type value (np.float64 and np.nan) (PR #4272)
  * Fixes a case where qcprot.CalcRMSDRotationalMatrix would return a
    RMSD of None
  * Fixes hydrogenbonds tutorial path to point to hbonds (Issue #4285, PR #4286)
  * Fix atom charge reading in PDBQT parser (Issue #4282, PR #4283)
  * Fix doctests failing from separated blocks of imports and 
    execution and incorrectly formatted test output (Issue #3925, PR #4366)

Enhancements
  * Added a reader for GROMOS11 TRC trajectories (PR #4292 , Issue #4291)
  * Document the usage of NoDataError in its docstring (Issue #3901, PR #4359)
  * Refactor c_distances backend to have a cython .pxd header and expose in
    libmdanalysis (Issue #4315, PR #4324)
  * Add faster nucleic acid Major and Minor pair distance calculators using
    AnalysisBase for updated nucleicacids module (Issue #3720, PR #3735)
  * Adds external sidebar links (Issue #4296)